Fix tile spacing/border gaps

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -170,7 +170,7 @@ button:hover{
     flex-direction: column;
     align-items: start;
     justify-items: center;
-    gap: 60px;
+    gap: 90px;
     margin: 30px 0px 65px 0px;
     align-items: center;
 }
@@ -192,9 +192,8 @@ button:hover{
     width: 430px;
     border-radius: 6px;
     overflow: hidden;
-    border: 4px solid white;
+    border: 4px solid #727d8a;
 }
-
 .description{
     display: flex;
     margin: 0 10px 10px 10px;
@@ -205,6 +204,7 @@ button:hover{
 .page{
     width: 100%;
     height: 100%;
+    display: block;
 }
 .ProjBody{
     font-family: 'Outfit';
